crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__named__missing_expression_3.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/named/missing_expression_3.py
---
## AST

```
Module(
    ModModule {
        range: 0..112,
        body: [
            Expr(
                StmtExpr {
                    range: 100..112,
                    value: Named(
                        ExprNamed {
                            range: 101..112,
                            target: Name(
                                ExprName {
                                    range: 101..102,
                                    id: "x",
                                    ctx: Store,
                                },
                            ),
                            value: BinOp(
                                ExprBinOp {
                                    range: 107..112,
                                    left: Name(
                                        ExprName {
                                            range: 107..108,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                    op: Add,
                                    right: Name(
                                        ExprName {
                                            range: 111..112,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | (x :=
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
